<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".Jp.ChooseKankouchiJp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="409dp"
        android:layout_height="310dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/back_map" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/himi_china"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kurobe_china"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toyama_china"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.632" />

    <Button
        android:id="@+id/himi_btn"
        android:layout_width="273dp"
        android:layout_height="82dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#3FAAA6"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:text="@string/bt_himi_china"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:rippleColor="#FFFFFF"
        app:strokeColor="@color/white" />

    <Button
        android:id="@+id/toyama_btn"
        android:layout_width="273dp"
        android:layout_height="82dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#4CAF50"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:text="@string/bt_toyama_china"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/himi_btn"
        app:rippleColor="#FFFFFF"
        app:strokeColor="@color/white" />

    <Button
        android:id="@+id/kurobe_btn"
        android:layout_width="273dp"
        android:layout_height="82dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#3F51B5"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:text="@string/bt_kurobe_kurobe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toyama_btn"
        app:rippleColor="#FFFFFF"
        app:strokeColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>